# career-mas

./: README.md  pyproject.toml
src/career_mas/: career-mas-main.py  crew.py  main.py
src/career_mas/config/: agents.yaml  tasks.yaml
