[project]
name = "career_mas"
version = "0.1.0"
description = "career_mas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
career_mas = "career_mas.main:run"
run_crew = "career_mas.main:run"
train = "career_mas.main:train"
replay = "career_mas.main:replay"
test = "career_mas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
